# AFS

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
depends/: build_depends.sh
depends/mediainfo/: ZenLib.tgz  build.md  build.sh
depends/mediainfo/output_mediainfo/lib/cmake/mediainfolib/: MediaInfoLibConfig.cmake  MediaInfoLibConfigVersion.cmake  MediaInfoLibTargets-release.cmake  MediaInfoLibTargets.cmake
depends/mediainfo/output_mediainfo/lib/pkgconfig/: libmediainfo.pc
depends/mediainfo/output_zenlib/lib/cmake/zenlib/: ZenLibConfig.cmake  ZenLibConfigVersion.cmake  ZenLibTargets-release.cmake  ZenLibTargets.cmake
depends/mediainfo/output_zenlib/lib/pkgconfig/: libzen.pc
depends/spdlog/: build.md  build.sh
depends/sqlite/: build.md  build.sh
depends/sqlite/output/lib/pkgconfig/: sqlite3.pc
depends/sqlpp11/: build.md  build.sh
depends/sqlpp11/output/lib/cmake/Sqlpp11/: Sqlpp11Targets.cmake
depends/sqlpp11/output/lib/cmake/date/: dateTargets.cmake
src/: CMakeLists.txt
src/inc/: CMakeLists.txt  stdinc.hpp
src/main/: CMakeLists.txt  main.cpp
src/tools/: CMakeLists.txt
src/tools/db/: CMakeLists.txt  db.cpp  db.hpp  db_connection.cpp  db_connection.h  maindb.h  maindb.sql
src/tools/db/demo/: CMakeLists.txt  main.cpp
src/tools/file_provider/: CMakeLists.txt  file_provider.cpp  file_provider.hpp
src/tools/file_provider/demo/: main.cpp
src/tools/log/: CMakeLists.txt  log.cpp  log.hpp
src/tools/my_mediainfo/: CMakeLists.txt  my_mediainfo.cpp  my_mediainfo.hpp
src/tools/my_mediainfo/demo/: main.cpp
